test/expected/strict_unset_plain.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "before"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "$nope"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "not-reached"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "before"
]
[Word
  Unquoted "echo"
]
[Word
  Variable "nope"
]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "not-reached"
]
before
shit: 3:6: error: Unable to expand 'nope' because the parameter is not set.
     3 |  echo $nope
       |       ^~~~~ here.
